clean up readme